syntax = "proto3";

package workout_training_api.ping.v1;

option go_package="github.com/talgat-ruby/workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";
import "model.proto";


message DeleteWorkoutRequest {
  string workout_id = 1;
}

message WorkoutDeleteResponse {}